<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">smartcard reader</string>
    <string name="log_to_file">Log to file</string>
    <string name="intro_app_select">Tap against smartcard to select app&#8230;</string>
    <string name="intro_batch_select">Tap and hold against smartcard for batch select&#8230;</string>
    <string name="intro_app_select_manual">Hold against smartcard for manual select&#8230;</string>
    <string name="intro_emv_read">Tap against smartcard to read payment data&#8230;\n</string>
    <string name="wrong_tag_err">Not ISO-DEP, emulate card with AID above!</string>
    <string name="wrong_resp_err">Select fail, emulate card with AID above!</string>
    <string name="tag_lost_err">Smartcard was removed</string>
    <string name="select_success">app selected!</string>
    <string name="select_success_prefix">app</string>
    <string name="hce_msg_prefix">smartcard demo msg</string>
    <string name="reader_msg_prefix">smartcard reader msg</string>
    <string name="in_msg_prefix">&lt;&#45;&#45;&#160;</string>
    <string name="out_msg_prefix">&#45;&#45;&gt;&#160;</string>
    <string name="okay_msg_prefix">**&#160;</string>
    <string name="err_msg_prefix">!!&#160;</string>
    <string name="select_ppse_err" formatted="false">Select ppse fail, status: 0x%X (%s)</string>
    <string name="select_app_err" formatted="false">Select app fail, status: 0x%X (%s)</string>
    <string name="select_ppse_ok">Select ppse okay, status: 0x%X</string>
    <string name="select_app_ok">Select app okay, status: 0x%X</string>
    <string name="select_app">select app</string>
    <string name="get_data_ok">Get data okay, status: 0x%X</string>
    <string name="get_data_err">Get data fail, status: 0x%X</string>
    <string name="gpo_ok">Get processing options okay, status: 0x%X</string>
    <string name="gpo_err">Get processing options fail, status: 0x%X</string>
    <string name="gpo_aip_afl_err">GPO response did not contain AIP and AFL</string>
    <string name="read_rec_ok" formatted="false">Read record okay, sfi: %d, rec: %d, status: 0x%X</string>
    <string name="read_rec_err" formatted="false">Read record fail, sfi: %d, rec: %d, status: 0x%X</string>
    <string name="test_modes">test modes</string>
    <string name="app_select">app select</string>
    <string name="batch_select">batch select</string>
    <string name="emv_read">emv read</string>
    <string name="new_app">new</string>
    <string name="copy">copy</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="rename">rename</string>
    <string name="select">select</string>
    <string name="add_app">add app</string>
    <string name="app_details">app details</string>
    <string name="add_group">add group</string>
    <string name="group_details">group details</string>
    <string name="share_msgs">share messages</string>
    <string name="clear_msgs">clear messages</string>
    <string name="about">about</string>
    <string name="settings">settings</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_quit">Quit</string>
    <string name="smartcard">smartcard</string>
    <string name="smartcards">smartcards</string>
    <string name="smartcard_app">smartcard app</string>
    <string name="smartcard_apps">smartcard apps</string>
    <string name="apps">smartcard apps</string>
    <string name="groups">smartcard groups</string>
    <string name="new_app_groups">Groups:</string>
    <string name="new_app_name">App:</string>
    <string name="new_app_name_hint">&lt;&#160;app name here!&#160;&gt;</string>
    <string name="new_app_aid">AID:</string>
    <string name="new_app_aid_hint">&lt;&#160;5&#8211;16 hex bytes&#160;&gt;</string>
    <string name="new_app_type">Type:</string>
    <string name="new_app_groups_hint">&lt;&#160;add groups for batch select&#160;&gt;</string>
    <string name="radio_payment">payment</string>
    <string name="radio_other">other</string>
    <string name="make_current">Set as current app to select?</string>
    <string name="empty_name">App name required!</string>
    <string name="empty_name_aid">App name and AID required!</string>
    <string name="empty_aid">AID required!</string>
    <string name="invalid_aid">AID must be 5&#8211;16 hex bytes!</string>
    <string name="name_exists">App name %s exists!</string>
    <string name="aid_exists">AID %s exists!</string>
    <string name="app_icon_alt">P</string>
    <string name="choose_app">To view and edit, click an app or long-press a group&#8230;</string>
    <string name="choose_group">Choose a smartcard group for detailed view and edit&#8230;</string>
    <string name="choose_apps_for_group">Choose apps to assign to the group&#8230;</string>
    <string name="nfc_disabled">Enable NFC?</string>
    <string name="enable_nfc">This app is useless when NFC is disabled. Reader mode depends on it. Hit OK to go to Settings, where you can enable NFC.</string>
    <string name="cmd_suffix">command</string>
    <string name="rsp_suffix">response</string>
    <string name="parsed_msg">parsed message</string>
    <string name="search">search</string>
    <string name="saved_to">saved to: %s</string>
    <string name="save_exception">could not save: IOException!</string>
    <string name="save_not_mounted">could not save: storage not mounted!</string>
    <string name="about_title">about %s</string>
    <string name="about_version">version %s</string>
    <string name="about_source">source &amp; licensing?</string>
    <string name="about_log_header">log files:</string>
    <string name="about_log_path">log path?</string>
    <string name="manual_select">manual select</string>
    <string name="auto_select">A</string>
    <string name="manual_connected">Smartcard connected for manual select</string>
    <string name="manual_disconnected">Smartcard not connected, tap and hold to connect&#8230;</string>
    <string name="unknown">unknown</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_app_list">smartcard apps</string>
    <string name="title_activity_app_view">smartcard app</string>
    <string name="title_activity_app_edit">edit app</string>
    <string name="title_activity_group_list">smartcard groups</string>
    <string name="title_activity_group_view">smartcard group</string>
    <string name="title_activity_group_edit">edit group</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="app_saved">smartcard app saved</string>
    <string name="group_saved">group saved</string>
    <string name="confirm_delete_app">This smartcard app will be deleted.</string>
    <string name="confirm_delete_group">This group will be deleted.</string>
    <string name="read_only_app"><b>Note:</b> This smartcard app is read-only. Edit and delete functions are not available. If needed, you can make a copy and edit that.</string>
    <string name="read_only_group"><b>Note:</b> This smartcard group is read-only. Edit and delete functions are not available. If needed, you can make a copy and edit that.</string>
    <string name="new_group">new group</string>
    <string name="none">none</string>
    <string name="edit_to_add_groups">edit to add groups</string>
    <string name="default_group_exists">default group already exists!</string>
    <string name="title_dialog_new_group">new group name</string>
    <string name="title_dialog_rename_group">group name</string>
    <string name="title_activity_msg_parse">MsgParseActivity</string>
    <string name="batch_complete">Batch complete!</string>
    <string name="batch_interrupted">Batch interrupted\n\n** Be sure to align antennas and hold securely against smartcard for the duration. **</string>
    <string name="group_exists" formatted="false">group %s already exists</string>
    <string name="empty_group">at least 1 app required</string>
</resources>
