<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_apps"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"
        android:title="@string/apps"
        android:icon="@drawable/ic_action_credit_card" />

    <item android:id="@+id/menu_manual"
        android:showAsAction="never"
        app:showAsAction="never"
        android:title="@string/manual_select"
        android:checkable="true" />
    <!--
        android:actionLayout="@layout/menu_button"
        app:actionLayout="@layout/menu_button" />
    -->

    <item android:id="@+id/menu_share_msgs"
        android:showAsAction="never"
        app:showAsAction="never"
        android:title="@string/share_msgs"
        android:actionProviderClass="android.widget.ShareActionProvider"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />

    <item android:id="@+id/menu_clear_msgs"
        android:showAsAction="never"
        app:showAsAction="never"
        android:title="@string/clear_msgs"
        android:icon="@drawable/ic_action_clear" />

    <item android:id="@+id/menu_settings"
        android:showAsAction="never"
        app:showAsAction="never"
        android:title="@string/settings"
        android:icon="@drawable/ic_action_settings" />
</menu>

