<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_manual"
          android:showAsAction="ifRoom"
          android:title="@string/manual_select"
          android:actionLayout="@layout/menu_button" />

    <item android:id="@+id/menu_share_msgs"
          android:showAsAction="always"
          android:title="@string/share_msgs"
          android:actionProviderClass=
          "android.widget.ShareActionProvider" />

    <item android:id="@+id/menu_clear_msgs"
          android:showAsAction="ifRoom"
          android:title="@string/clear_msgs"
          android:icon="@drawable/ic_action_remove" />

    <item android:id="@+id/menu_new_app"
          android:showAsAction="never"
          android:title="@string/new_app"
          android:icon="@drawable/ic_action_new" />

    <item android:id="@+id/menu_copy_app"
          android:showAsAction="never"
          android:title="@string/copy_app"
          android:icon="@drawable/ic_action_copy" />

    <item android:id="@+id/menu_edit_all_apps"
          android:showAsAction="never"
          android:title="@string/edit_apps"
          android:icon="@drawable/ic_action_edit"
          android:enabled="false" />

    <item android:id="@+id/menu_settings"
          android:showAsAction="never"
          android:title="@string/settings"
          android:icon="@drawable/ic_action_settings" />
</menu>

