<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_add_group"
        android:showAsAction="always"
        app:showAsAction="always"
        android:title="@string/add_group"
        android:icon="@drawable/ic_action_add" />

    <item android:id="@+id/menu_group_details"
        android:showAsAction="never"
        app:showAsAction="never"
        android:title="@string/group_details"
        android:icon="@drawable/ic_action_folder" />

    <item android:id="@+id/menu_share_msgs"
        android:showAsAction="never"
        app:showAsAction="never"
        android:title="@string/share_msgs"
        android:actionProviderClass="android.widget.ShareActionProvider"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />

    <item android:id="@+id/menu_clear_msgs"
        android:showAsAction="never"
        app:showAsAction="never"
        android:title="@string/clear_msgs"
        android:icon="@drawable/ic_action_clear" />
</menu>
